* What will be new in gsl-1.10:

** The autoconf macro AM_PATH_GSL has been renamed to AX_PATH_GSL, to
avoid conflicts with the autoconf namespace.

** Improved handling of underflow in gsl_eigen_symm.

** The function gsl_multiroot_fdjacobian now returns the error code
GSL_ESING if any of the columns of the computed jacobian matrix are
zero.  This may occur if the step size of the derivative is too small.

** Extended the function gsl_sf_beta_inc(a,b,x) to handle cases where
a<0 or b<0.

** Fixed the round-off error estimate in gsl_deriv_{central,backwards,
forward} to correctly account for numerical error in the step-size h.

** Fixed gsl_cdf_beta_Pinv, gsl_cdf_gamma_Pinv, gsl_cdf_beta_Pinv to
avoid returning spurious values for large parameters when the
iteration did not converge.  If the iteration cannot converge, GSL_NAN
is returned.

** Added functions gsl_vector_isnonneg and gsl_matrix_isnonneg.

** gsl_ran_dirichlet now handles smaller values of alpha[] without
underflow, avoiding a NaN in the returned value.

** The SVD routines now avoid underflow in the Schur decomposition for
matrices with extremely small values <O(1e-150).

** gsl_complex_pow now returns 0^0=1 (instead of zero) to match the usual
pow function, and handles z^(1,0) and z^(-1,0) as special cases.

** Fixed a bug in the set function for multifit lmder solver so that
previous values are cleared correctly.

** Improved the function gsl_log1p to prevent possible loss of
accuracy caused by optimisations.

** License updated to GNU GPL version 3.

** Added functions gsl_matrix_subrow and gsl_matrix_subcolumn

** Extended Cholesky routines to complex matrices

** Improved the convergence test in the Lambert functions to take
account of finite precision and avoid possible failure to converge.

** The configure script no longer redefines finite() to isfinite() as
a workaround for missing finite(), as this caused problems on Solaris.
If finite() is not present gsl_finite() will be used instead.
